changed some things from german to english, but need to add some comments

--- a/Connect4.html
+++ b/Connect4.html
@@ -26,17 +26,17 @@ Connect Four
 
 <div style="position:relative;">
 <p>
-<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="gesetzt(0)"> 
-<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="gesetzt(1)"> 
-<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="gesetzt(2)"> 
-<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="gesetzt(3)"> 
-<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="gesetzt(4)"> 
-<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="gesetzt(5)"> 
-<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="gesetzt(6)">
+<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(0)"> 
+<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(1)"> 
+<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(2)"> 
+<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(3)"> 
+<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(4)"> 
+<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(5)"> 
+<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(6)">
 </p>
 <br clear="all">
 
-<div id="IEschreiben"></div>
+<div id="board"></div>
 
 
 </div>
