added basic layout for project

--- a/Connect4.html
+++ b/Connect4.html
@@ -11,57 +11,93 @@
 </head>
 <body bgcolor="#EEEFE4" style="background-color:#4b5980; background-image:url(background.jpg); background-repeat:repeat-y;">
 
-<table border="0">
-<tr><td height="30"></td></tr>
 
 
 
-	<tr >
-		<td bgcolor="#FFFFFF" id="borderblue">
+
+<div id="wrap">
+	<div id="header"><h1>$ Consecutive Pucks Game</h1></div>
+	<div id="nav">
+		<ul>
+			<li><a href="/">Nav 1</a></li>
+			<li><a href="/">Nav 2</a></li>
+			<li><a href="/">Nav 3</a></li>
+			<li><a href="/">Nav 4</a></li>
+			<li><a href="/">Nav 5</a></li>
+		</ul>
+	</div>
+	<div id="main">
+		<h2>Column 1</h2>
+		<table border="0">
+		<tr><td height="30"></td></tr>
 
 
-Connect Four
-<br>
+
+			<tr >
+				<td bgcolor="#FFFFFF" id="borderblue">
 
 
-<div style="position:relative;">
-<p>
-<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(0)"> 
-<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(1)"> 
-<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(2)"> 
-<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(3)"> 
-<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(4)"> 
-<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(5)"> 
-<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(6)">
-</p>
-<br clear="all">
-
-<div id="board"></div>
+		Connect Four
+		<br>
 
 
+		<div style="position:relative;">
+		<p>
+		<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(0)"> 
+		<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(1)"> 
+		<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(2)"> 
+		<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(3)"> 
+		<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(4)"> 
+		<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(5)"> 
+		<img src="column.gif" width="60" height="370" align="left" hspace="0" onClick="set(6)">
+		</p>
+		<br clear="all">
+
+		<div id="board"></div>
+
+
+		</div>
+			<br>
+			<br>
+				</td>
+			</tr>
+			</table>
+			</td>
+			<td width="20"></td>
+		</tr>
+			</table>
+			<br>
+			</td>
+			<td width="100">
+			</td>
+		</tr>
+		</table>
+	</div>
+	<div id="sidebar">
+		<h2>Height Scores</h2>
+		<p>Here are some high scores</p>
+		<ul>
+			<li><a href="/">Link 1</a></li>
+			<li><a href="/">Link 2</a></li>
+			<li><a href="/">Link 3</a></li>
+			<li><a href="/">Link 4</a></li>
+			<li><a href="/">Link 5</a></li>
+			<li><a href="/">Link 6</a></li>
+			<li><a href="/">Link 7</a></li>
+			<li><a href="/">Link 8</a></li>
+			<li><a href="/">Link 9</a></li>
+			<li><a href="/">Link 10</a></li>
+			<li><a href="/">Link 11</a></li>
+			<li><a href="/">Link 12</a></li>
+			<li><a href="/">Link 13</a></li>
+			<li><a href="/">Link 14</a></li>
+			<li><a href="/">Link 15</a></li>
+		</ul>
+	</div>
+	<div id="footer">
+		<p>Footer</p>
+	</div>
 </div>
-
-
-
-
-
-
-
-	<br>
-	<br>
-		</td>
-	</tr>
-	</table>
-	</td>
-	<td width="20"></td>
-</tr>
-	</table>
-	<br>
-	</td>
-	<td width="100">
-	</td>
-</tr>
-</table>
 
 
 </body>
