Added about page

--- a/Connect4.html
+++ b/Connect4.html
@@ -16,10 +16,10 @@
 
 
 <div id="wrap">
-	<div id="header"><h1>$ Consecutive Pucks Game</h1></div>
+	<div id="header"><h1>Consecutive Pucks Game</h1></div>
 	<div id="nav">
 		<ul>
-			<li><a href="/">Nav 1</a></li>
+			<li><a href="About.html">About Us</a></li>
 			<li><a href="/">Nav 2</a></li>
 			<li><a href="/">Nav 3</a></li>
 			<li><a href="/">Nav 4</a></li>
@@ -27,7 +27,7 @@
 		</ul>
 	</div>
 	<div id="main">
-		<h2>Column 1</h2>
+		
 		<table border="0">
 		<tr><td height="30"></td></tr>
 
@@ -37,7 +37,7 @@
 				<td bgcolor="#FFFFFF" id="borderblue">
 
 
-		Connect Four
+		
 		<br>
 
 
@@ -74,7 +74,7 @@
 		</table>
 	</div>
 	<div id="sidebar">
-		<h2>Height Scores</h2>
+		<h2>High Scores</h2>
 		<p>Here are some high scores</p>
 		<ul>
 			<li><a href="/">Link 1</a></li>
@@ -95,10 +95,8 @@
 		</ul>
 	</div>
 	<div id="footer">
-		<p>Footer</p>
+		
 	</div>
 </div>
-
-
 </body>
 </html>
