--- a/index.html
+++ b/index.html
@@ -10,18 +10,13 @@
 
 </head>
 <body bgcolor="#EEEFE4" style="background-color:#4b5980; background-image:url(background.jpg); background-repeat:repeat-y;">
-
-
-
-
-
 <div id="wrap">
 	<div id="header"><h1>Consecutive Pucks Game</h1></div>
 	<div id="nav">
 		<ul>
-			<li><a href="About.html">About Us</a></li>
-			<li><a href="/">Nav 2</a></li>
-			<li><a href="/">Nav 3</a></li>
+			<li><a href="index.html">Play The Game</a></li>
+			<li><a href="about.html">About Us</a></li>
+			<li><a href="svgs.html">SVG Images</a></li>
 			<li><a href="/">Nav 4</a></li>
 			<li><a href="/">Nav 5</a></li>
 		</ul>
