added some html 5 tags and added katies work as well

--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-       "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 <title>Connect Four in Javascript</title>
@@ -11,17 +10,15 @@
 </head>
 <body bgcolor="#EEEFE4" style="background-color:#4b5980; background-image:url(background.jpg); background-repeat:repeat-y;">
 <div id="wrap">
-	<div id="header"><h1>Consecutive Pucks Game</h1></div>
-	<div id="nav">
+	<header><h1>Consecutive Pucks Game</h1></header>
+	<nav>
 		<ul>
 			<li><a href="index.html">Play The Game</a></li>
 			<li><a href="about.html">About Us</a></li>
 			<li><a href="svgs.html">SVG Images</a></li>
-			<li><a href="/">Nav 4</a></li>
-			<li><a href="/">Nav 5</a></li>
 		</ul>
-	</div>
-	<div id="main">
+    </nav>
+	<article>
 		
 		<table border="0">
 		<tr><td height="30"></td></tr>
@@ -67,8 +64,8 @@
 			</td>
 		</tr>
 		</table>
-	</div>
-	<div id="sidebar">
+	</article>
+	<!--<div id="sidebar">
 		<h2>High Scores</h2>
 		<p>Here are some high scores</p>
 		<ul>
@@ -88,10 +85,10 @@
 			<li><a href="/">Link 14</a></li>
 			<li><a href="/">Link 15</a></li>
 		</ul>
-	</div>
-	<div id="footer">
-		
-	</div>
+	</div>-->
+	<footer>
+		Created by Katie Kalm, Patrick Behrens and Joesph Demma
+	</footer>
 </div>
 </body>
 </html>
