--- a/About.html
+++ b/About.html
@@ -1,5 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-       "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
 <head>
 <title>Connect Four About</title>
@@ -11,62 +10,69 @@
 </head>
 <body bgcolor="#EEEFE4" style="background-color:#4b5980; background-image:url(background.jpg); background-repeat:repeat-y;">
 <div id="wrap">
-	<div id="header"><h1>Consecutive Pucks Game</h1></div>
-	<div id="nav">
+	<header><h1>Consecutive Pucks Game</h1><header>
+	<nav>
 		<ul>
 			<li><a href="index.html">Play The Game</a></li>
 			<li><a href="about.html">About Us</a></li>
 			<li><a href="svgs.html">SVG Images</a></li>
-			<li><a href="/">Nav 4</a></li>
-			<li><a href="/">Nav 5</a></li>
+
 		</ul>
-	</div>
-	<div id="main">
+	</nav>
+	<article>
 		
         <h1>About us</h1>
-        <p> We are the Four Consecutive Pucks teams. The goal of our project is to create an interactive Connect 4 game. It can be played by a user
+        <p> We are the Four Consecutive Pucks teams. The goal of our project was to create an interactive Connect 4 game. It can be played by a user
         against the computer. The game is played on a rectangular game board consisting of seven
-        columns, each with six empty slots. Each user has coloured pieces (one user will be red, the
-        other yellow) they he/she can drop into the empty slots from the top of each column. The
+        columns, each with six empty slots. Each user has colored pieces (one user will be red, the
+        other yellow) that he/she can drop into the empty slots from the top of each column. The
         object of the game is to end up with four consecutive pucks, either horizontally, vertically,
-        or diagonally, before your opponent. Things to remember are that pucks can only be
-        dropped into slots from the top of the columns, and that you must always watch out for your
-        opponent's moves.</p>
+        or diagonally, before your opponent. Things to remember are that 
+        <ul>
+        <li>pucks can only be
+        dropped into slots from the top of the columns, and </li>
+        <li>you must always watch out for your
+        opponent's moves.</li></ul></p>
 
-        <p> The Project  was break down goes as follows<br>
-        Duties<br>
-        Pat Behrens -Game Logic/German Translation<br>
-        Katie Kalm - Board Graphics<br>
-        Joseph Demma - HTML site and help</p>
+        <p> The Project break down goes as follows:<br><br>
+        <strong>Duties</strong><br>
+        Pat Behrens - Game Logic/German Translation<br>
+        Katie Kalm - HTML site and Board Graphics<br>
+        Joseph Demma - HTML site and Help</p>
 
-        <p>Game Logic -This is the foundation of the game itself and will consist of all the rules and logic
+        <p><strong>Game Logic</strong><br>
+        This is the foundation of the game itself and will consist of all the rules and logic
         needed in order for the user to have an interactive experience. Game logic will be the basis for the
         application and will contain all the needed control code instructions that the user of the game will
         abide by. Furthermore, it will control how the computer responds to the user's moves. It is adapted 
-        from a German Connect Four implementation and uses some complex logic for the game based on something a guy from MIT created</p>
+        from a German Connect Four implementation and uses some complex logic for the game based on a Minimax algorithm developed by someone from MIT.</p>
 
-        <p>HTML Site/Interface -The actual interface design will serve as the front end of the game and the
+        <p><strong>HTML Site/Interface</strong><br>
+        The actual interface design will serve as the front end of the game and the
         user will be able to click on buttons or screen objects in order to communicate with the game logic.
         The design of the HTML site will need to be performed in a way that it works hand in hand with the
         game logic piece.</p>
 
-        <p>Board Graphics -The display set and graphics colorset used along with any animation features will
+        <p><strong>Board Graphics</strong><br>
+        The display set and graphics colorset used along with any animation features will
         be tackled in this arena.</p>
 
-        <p> We used the following languages in our project:<br>
-        Javascript<br>
-        HTML<br>
-        CSS</p>
+        <p><strong>We used the following languages in our project:</strong><br>
+        <ul>
+        <li>Javascript</li>
+        <li>HTML</li>
+        <li>CSS</li>
+        </ul></p>
 
-        <p> If you need to contact us or have questions please contact us at:<br>
+        <p><em>If you need to contact us or have questions please contact us at:</em><br>
         Patrick Behrens (pbehrens@luc.edu)<br>
         Katie Kalm (kkalm143@gmail.com)<br>
         Joseph Demma (jcd81590@sbcglobal.net)</p>
 
         <p>Also here is a link to our github where the project is hosted<br>
         <a href="https://github.com/pbehrens/client-side-game">github repository</a> </p>
-	</div>
-	<div id="sidebar">
+	</article>
+	<!--<div id="sidebar">
 		<h2>High Scores</h2>
 		<p>Here are some high scores</p>
 		<ul>
@@ -86,10 +92,10 @@
 			<li><a href="/">Link 14</a></li>
 			<li><a href="/">Link 15</a></li>
 		</ul>
-	</div>
-	<div id="footer">
-		
-	</div>
+	</div>-->
+	<footer>
+		Created by Katie Kalm, Patrick Behrens, Joeseph Demma
+    </footer>
 </div>
 </body>
 </html>
